--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAltD6Kd7wGiuY6dDsDwYavGL45e03BvLA&callback=initMap" 
         async defer></script>
         <script>
-            // fonction qui est appelée lorsque l'API google map est chargée
+            // fonction qui est appelée lorsque l'API google map est chargée (javascript)
             function initMap() {
                 // study area = 2000 km^2 in Burkina Faso around the town of Koumbia
-                var centerCoordinates = {lat: 11.165, lng: -3.655};
+                var topLeft = {lat: 11.37, lng: -3.89};
+                var topRight = {lat: 11.37, lng: -3.42};
+                var bottomRight = {lat: 10.96, lng: -3.42};
+                var bottomLeft = {lat: 10.96, lng: -3.89};
+
+                // Calculer le centre de la bounding box
+                var centerCoordinates = {
+                    lat: (topLeft.lat + bottomRight.lat) / 2,
+                    lng: (topLeft.lng + bottomRight.lng) / 2
+                };
 
                 var map = new google.maps.Map(document.getElementById('map'), {
                     zoom: 8,
@@ -19,9 +28,47 @@
                 var marker = new google.maps.Marker({
                     position: centerCoordinates,
                     map: map,
-                    title: 'Hello World!'
+                    title: 'Bounding Box Center'
+                });
+
+                // Créer une forme de rectangle pour représenter la bounding box
+                var boundingBox = new google.maps.Polygon({
+                    map: map,
+                    paths: [topLeft, topRight, bottomRight, bottomLeft],
+                    strokeColor: '#FF0000',
+                    strokeOpacity: 1,
+                    strokeWeight: 2,
+                    fillColor: '#FF0000',
+                    fillOpacity: 0.2
                 });
             }
+
+            // Charger les segments à partir du fichier JSON
+            fetch('segments.json')
+                .then(response => response.json())
+                .then(data => {
+                    data.forEach(segment => {
+                        var polygon = new google.maps.Polygon({
+                            paths: segment.coordinates,
+                            map: map,
+                            strokeColor: '#0000FF',
+                            strokeOpacity: 0.8,
+                            strokeWeight: 2,
+                            fillColor: '#0000FF',
+                            fillOpacity: 0.35
+                        });
+
+                        // Ajouter un gestionnaire d'événements pour afficher des informations lorsque le segment est cliqué
+                        google.maps.event.addListener(polygon, 'click', function (event) {
+                            // Vous pouvez personnaliser ce bloc pour afficher les informations que vous souhaitez.
+                            alert('Segment ID: ' + segment.segment_id);
+                        });
+                    });
+                })
+                .catch(error => {
+                    console.error('Erreur lors du chargement des segments:', error);
+                });
+
         </script>
     </head>
     <body>
