--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAltD6Kd7wGiuY6dDsDwYavGL45e03BvLA&callback=initMap" 
         async defer></script>
         <script>
+            var map;
             // fonction qui est appelée lorsque l'API google map est chargée (javascript)
             function initMap() {
                 // study area = 2000 km^2 in Burkina Faso around the town of Koumbia
@@ -19,7 +20,7 @@
                     lng: (topLeft.lng + bottomRight.lng) / 2
                 };
 
-                var map = new google.maps.Map(document.getElementById('map'), {
+                map = new google.maps.Map(document.getElementById('map'), {
                     zoom: 8,
                     center: centerCoordinates
                 });
@@ -41,33 +42,33 @@
                     fillColor: '#FF0000',
                     fillOpacity: 0.2
                 });
-            }
 
-            // Charger les segments à partir du fichier JSON
-            fetch('segments.json')
-                .then(response => response.json())
-                .then(data => {
-                    data.forEach(segment => {
-                        var polygon = new google.maps.Polygon({
-                            paths: segment.coordinates,
-                            map: map,
-                            strokeColor: '#0000FF',
-                            strokeOpacity: 0.8,
-                            strokeWeight: 2,
-                            fillColor: '#0000FF',
-                            fillOpacity: 0.35
-                        });
+                // Charger les segments à partir du fichier JSON
+                fetch('segments.json')
+                    .then(response => response.json())
+                    .then(data => {
+                        data.forEach(segment => {
+                            var polygon = new google.maps.Polygon({
+                                paths: segment.coordinates,
+                                map: map,
+                                strokeColor: '#0000FF',
+                                strokeOpacity: 0.8,
+                                strokeWeight: 2,
+                                fillColor: '#0000FF',
+                                fillOpacity: 0.35
+                            });
 
-                        // Ajouter un gestionnaire d'événements pour afficher des informations lorsque le segment est cliqué
-                        google.maps.event.addListener(polygon, 'click', function (event) {
-                            // Vous pouvez personnaliser ce bloc pour afficher les informations que vous souhaitez.
-                            alert('Segment ID: ' + segment.segment_id);
+                            // Ajouter un gestionnaire d'événements pour afficher des informations lorsque le segment est cliqué
+                            google.maps.event.addListener(polygon, 'click', function (event) {
+                                // Vous pouvez personnaliser ce bloc pour afficher les informations que vous souhaitez.
+                                alert('Segment ID: ' + segment.segment_id);
+                            });
                         });
+                    })
+                    .catch(error => {
+                        console.error('Erreur lors du chargement des segments:', error);
                     });
-                })
-                .catch(error => {
-                    console.error('Erreur lors du chargement des segments:', error);
-                });
+            }
 
         </script>
     </head>
