--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 });
 
                 // Marqueur (point rouge) centré sur la zone d'étude
-                var marker = new google.maps.Marker({
-                    position: centerCoordinates,
-                    map: map,
-                    title: 'Bounding Box Center'
-                });
+                // var marker = new google.maps.Marker({
+                //     position: centerCoordinates,
+                //     map: map,
+                //     title: 'Bounding Box Center'
+                // });
 
                 // Créer une forme de rectangle pour représenter la bounding box
                 var boundingBox = new google.maps.Polygon({
@@ -60,8 +60,8 @@
 
                             // Ajouter un gestionnaire d'événements pour afficher des informations lorsque le segment est cliqué
                             google.maps.event.addListener(polygon, 'click', function (event) {
-                                // Vous pouvez personnaliser ce bloc pour afficher les informations que vous souhaitez.
-                                alert('Segment ID: ' + segment.segment_id);
+                                //alert('Segment ID: ' + segment.segment_id);
+                                showHeatmap(segment.coordinates);
                             });
                         });
                     })
@@ -70,9 +70,52 @@
                     });
             }
 
+            // Fonction pour afficher la heatmap dans la fenêtre de droite
+            function showHeatmap(coordinates) {
+                // Récupérer la div pour la heatmap
+                var heatmapDiv = document.getElementById('heatmap');
+
+                // Ajuster la largeur de la carte à 50%
+                map.setOptions({
+                    width: '50%'
+                });
+
+                // Créer une nouvelle instance de carte Google Maps centrée sur le polygone sélectionné
+                var heatmapMap = new google.maps.Map(heatmapDiv, {
+                    center: new google.maps.LatLng(coordinates[0].lat, coordinates[0].lng),
+                    zoom: 14,
+                    mapTypeId: 'satellite'  // Vous pouvez ajuster le type de carte selon vos besoins
+                });
+
+                // Ajouter la heatmap
+                var heatmap = new google.maps.visualization.HeatmapLayer({
+                    data: coordinates.map(coord => new google.maps.LatLng(coord.lat, coord.lng)),
+                    map: heatmapMap
+                });
+
+                // Afficher la fenêtre de droite
+                heatmapDiv.style.display = 'block';
+            }
         </script>
     </head>
+    <style>
+        #map {
+            width: 100%;
+            height: 100vh;
+        }
+
+        #heatmap {
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: 50%; /* Ajustez la largeur selon vos besoins */
+            height: 100vh;
+            display: none; /* Caché par défaut */
+        }
+    </style>
     <body>
-        <div id="map" style="height: 100vh; width: 100%;"></div>
+        <!-- <div id="map" style="height: 100vh; width: 100%;"></div> -->
+        <div id="map"></div>
+        <div id="heatmap"></div>
     </body>
 </html>
