--- a/index.html
+++ b/index.html
@@ -1,121 +1,183 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Koumbia Map</title>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAltD6Kd7wGiuY6dDsDwYavGL45e03BvLA&callback=initMap" 
-        async defer></script>
-        <script>
-            var map;
-            // fonction qui est appelée lorsque l'API google map est chargée (javascript)
-            function initMap() {
-                // study area = 2000 km^2 in Burkina Faso around the town of Koumbia
-                var topLeft = {lat: 11.37, lng: -3.89};
-                var topRight = {lat: 11.37, lng: -3.42};
-                var bottomRight = {lat: 10.96, lng: -3.42};
-                var bottomLeft = {lat: 10.96, lng: -3.89};
-
-                // Calculer le centre de la bounding box
-                var centerCoordinates = {
-                    lat: (topLeft.lat + bottomRight.lat) / 2,
-                    lng: (topLeft.lng + bottomRight.lng) / 2
-                };
-
-                map = new google.maps.Map(document.getElementById('map'), {
-                    zoom: 8,
-                    center: centerCoordinates
-                });
-
-                // Marqueur (point rouge) centré sur la zone d'étude
-                // var marker = new google.maps.Marker({
-                //     position: centerCoordinates,
-                //     map: map,
-                //     title: 'Bounding Box Center'
-                // });
-
-                // Créer une forme de rectangle pour représenter la bounding box
-                var boundingBox = new google.maps.Polygon({
-                    map: map,
-                    paths: [topLeft, topRight, bottomRight, bottomLeft],
-                    strokeColor: '#FF0000',
-                    strokeOpacity: 1,
-                    strokeWeight: 2,
-                    fillColor: '#FF0000',
-                    fillOpacity: 0.2
-                });
-
-                // Charger les segments à partir du fichier JSON
-                fetch('segments.json')
-                    .then(response => response.json())
-                    .then(data => {
-                        data.forEach(segment => {
-                            var polygon = new google.maps.Polygon({
-                                paths: segment.coordinates,
-                                map: map,
-                                strokeColor: '#0000FF',
-                                strokeOpacity: 0.8,
-                                strokeWeight: 2,
-                                fillColor: '#0000FF',
-                                fillOpacity: 0.35
-                            });
-
-                            // Ajouter un gestionnaire d'événements pour afficher des informations lorsque le segment est cliqué
-                            google.maps.event.addListener(polygon, 'click', function (event) {
-                                //alert('Segment ID: ' + segment.segment_id);
-                                showHeatmap(segment.coordinates);
-                            });
-                        });
-                    })
-                    .catch(error => {
-                        console.error('Erreur lors du chargement des segments:', error);
-                    });
-            }
-
-            // Fonction pour afficher la heatmap dans la fenêtre de droite
-            function showHeatmap(coordinates) {
-                // Récupérer la div pour la heatmap
-                var heatmapDiv = document.getElementById('heatmap');
-
-                // Ajuster la largeur de la carte à 50%
-                map.setOptions({
-                    width: '50%'
-                });
-
-                // Créer une nouvelle instance de carte Google Maps centrée sur le polygone sélectionné
-                var heatmapMap = new google.maps.Map(heatmapDiv, {
-                    center: new google.maps.LatLng(coordinates[0].lat, coordinates[0].lng),
-                    zoom: 14,
-                    mapTypeId: 'satellite'  // Vous pouvez ajuster le type de carte selon vos besoins
-                });
-
-                // Ajouter la heatmap
-                var heatmap = new google.maps.visualization.HeatmapLayer({
-                    data: coordinates.map(coord => new google.maps.LatLng(coord.lat, coord.lng)),
-                    map: heatmapMap
-                });
-
-                // Afficher la fenêtre de droite
-                heatmapDiv.style.display = 'block';
-            }
-        </script>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Koumbia Map</title>
     <style>
-        #map {
-            width: 100%;
-            height: 100vh;
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
         }
-
-        #heatmap {
-            position: fixed;
+        #map-container {
+            position: absolute;
+            top: 40px;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        #nav-menu {
+            position: absolute;
             top: 0;
+            left: 0;
+            width: 100%;
+            height: 40px;
+            background-color: #333; /* Background color for the navigation menu */
+            color: #fff; /* Text color for the menu items */
+            z-index: 999;
+        }
+        #nav-menu ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+        #nav-menu li {
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+        #info-panel {
+            position: absolute;
+            top: 40px;
             right: 0;
-            width: 50%; /* Ajustez la largeur selon vos besoins */
-            height: 100vh;
-            display: none; /* Caché par défaut */
+            width: 40%;
+            height: 100%;
+            background-color: #fff;
+            box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+            transform: translateX(100%); /* Adjusted initial position */
+        }
+        #info-panel-arrow {
+            position: absolute;
+            top: 50%;
+            left: -20px; /* Adjusted left position to the left side of the panel */
+            transform: translateY(-50%) rotate(90deg); /* Rotated to face right */
+            width: 0;
+            height: 0;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-top: 10px solid #3a1414;
+            cursor: pointer;
+        }
+        #map-in-panel {
+            width: 100%;
+            height: 100%;
         }
     </style>
-    <body>
-        <!-- <div id="map" style="height: 100vh; width: 100%;"></div> -->
-        <div id="map"></div>
+</head>
+<body>
+    <div id="nav-menu">
+        <ul>
+            <li><a href="#menu" style="text-decoration: none; color: #fff;">Menu</a></li>
+            <li><a href="#infos" style="text-decoration: none; color: #fff;">Infos</a></li>
+            <li><a href="#contact" style="text-decoration: none; color: #fff;">Contact</a></li>
+        </ul>
+    </div>
+    <div id="map-container"></div>
+    <div id="info-panel">
+        <div id="info-content">
+            <!-- Data will be displayed here when an area is clicked -->
+        </div>
+        <div id="info-panel-arrow" onclick="toggleInfoPanel()"></div>
+        <div id="map-in-panel">
+            <!-- New map will be displayed here when an area is clicked -->
+        </div>
+    </div>
+    <!-- <div id="heatmap-container">
         <div id="heatmap"></div>
-    </body>
+    </div> -->
+    <script>
+        let infoPanelVisible = false;
+        let mapInPanel;
+        let map;
+        // let heatmap;
+        // let heatmapContainerVisible = false;
+
+        // function toggleHeatmapContainer() {
+        //     const heatmapContainer = document.getElementById("heatmap-container");
+        //     heatmapContainerVisible = !heatmapContainerVisible;
+
+        //     if (heatmapContainerVisible) {
+        //         heatmapContainer.style.width = "50%"; // Show the heatmap container
+        //     } else {
+        //         heatmapContainer.style.width = "0"; // Hide the heatmap container
+        //     }
+        // }
+
+        function toggleInfoPanel() {
+            const infoPanel = document.getElementById("info-panel");
+            infoPanelVisible = !infoPanelVisible;
+
+            if (infoPanelVisible) {
+                infoPanel.style.transform = "translateX(0)"; // Show the panel
+            } else {
+                infoPanel.style.transform = "translateX(100%)"; // Hide the panel
+            }
+        }
+
+        function initMap() {
+            map = new google.maps.Map(document.getElementById("map-container"), {
+                center: { lat: 11.166, lng: -3.655 }, // Centered around Koumbia
+                zoom: 12,
+            });
+
+            // Fetch data from the JSON file
+            fetch('segments.json')
+                .then(response => response.json())
+                .then(data => {
+                    // Loop through the data and create polygons for each area
+                    data.forEach((areaData) => {
+                        const polygon = new google.maps.Polygon({
+                            paths: areaData.coordinates.map(coord => ({
+                                lat: parseFloat(coord.lat),
+                                lng: parseFloat(coord.lng)
+                            })),
+                            map: map,
+                        });
+
+                        // Add click event listener to the polygon to open the info panel with data
+                        polygon.addListener("click", () => {
+                            const infoContent = `
+                                <h3>${areaData.name}</h3>
+                                <p>${areaData.description}</p>
+                            `;
+                            document.getElementById("info-content").innerHTML = infoContent;
+                            toggleInfoPanel(); // Open or hide the panel when an area is clicked
+
+                            // Create a new map in the panel centered on the clicked area
+                            const mapOptions = {
+                                center: new google.maps.LatLng(areaData.coordinates[0].lat, areaData.coordinates[0].lng),
+                                zoom: 18,
+                            };
+                            mapInPanel = new google.maps.Map(document.getElementById("map-in-panel"), mapOptions);
+                            const imageBounds = new google.maps.LatLngBounds(
+                                new google.maps.LatLng(areaData.coordinates[0].lat, areaData.coordinates[0].lng),
+                                new google.maps.LatLng(areaData.coordinates[1].lat, areaData.coordinates[1].lng)
+                            );
+                            const imageOverlay = new google.maps.GroundOverlay(
+                                areaData.image, // Image URL
+                                imageBounds
+                            );
+                            imageOverlay.setMap(mapInPanel);
+                        });
+                    });
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                });
+
+            // Add click event listener to the polygon to toggle heatmap container
+            // google.maps.event.addListener(polygon, 'click', function (event) {
+            //     toggleHeatmapContainer();
+
+            //     // Initialize or update the heatmap when the container is visible
+            //     if (heatmapContainerVisible) {
+            //         initializeHeatmap(heatmapData);
+            //     }
+            // });
+        }
+
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAltD6Kd7wGiuY6dDsDwYavGL45e03BvLA&callback=initMap" async defer></script>
+</body>
 </html>
