--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
             background-color: #fff;
             box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
             transform: translateX(100%); /* Adjusted initial position */
+            display: flex;
+            flex-direction: column;
         }
+        /* petite fleche du panel */
         #info-panel-arrow {
             position: absolute;
             top: 50%;
@@ -83,6 +86,31 @@
         #info-content h3 {
             margin: 0;
         }
+        /* legend de la heatmap -> barre blanche en bas */
+        #legend {
+            width: 100%;
+            height: 180px; /* Hauteur de la légende */
+            background-color: #fff;
+            position: relative; /* Position relative pour placer les éléments internes absolus */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+        /* degradé de couleur barre de la heatmap */
+        #gradient {
+            width: 100%;
+            height: 20px; /* Ajustez la hauteur selon vos besoins */
+            background: linear-gradient(to right, #ff0000, #00ff00);
+        }
+        #legend-content {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            padding: 0px; /* Ajustez la marge selon vos besoins */
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -104,10 +132,19 @@
         <div id="info-content">
             <!-- Data will be displayed here when an area is clicked -->
         </div>
-        <div id="info-panel-arrow" onclick="toggleInfoPanel()"></div>
         <div id="map-in-panel">
             <!-- New map will be displayed here when an area is clicked -->
         </div>
+        <div id="legend">
+            <!-- <div id="gradient"></div> -->
+            <div id="legend-content">
+                <!-- <h4>Heatmap LegendSS</h4> -->
+                <div id="gradient"></div>
+                <p>Intensity RangeSS: ${maxIntensity} - ${minIntensity}</p>
+                <!-- Ajoutez d'autres éléments de légende selon vos besoins -->
+            </div>
+        </div>
+        <div id="info-panel-arrow" onclick="toggleInfoPanel()"></div>
     </div>
 
     <script>
@@ -208,7 +245,7 @@
                             }));
 
                             // Add console.log for debugging
-                            console.log('polygonCoordinates V1033:', polygonCoordinates);
+                            console.log('polygonCoordinates V1232:', polygonCoordinates);
                             console.log('heatmapData:', heatmapData);
 
                             heatmap = new google.maps.visualization.HeatmapLayer({
@@ -219,6 +256,19 @@
                                 map: mapInPanel,
                             });
                             //heatmap.setMap(mapInPanel);
+
+                            // Obtenir les valeurs minimale et maximale de l'intensité
+                            const minIntensity = Math.min(...polygonCoordinates.map(coord => coord.intensity));
+                            const maxIntensity = Math.max(...polygonCoordinates.map(coord => coord.intensity));
+
+                            // Mise à jour de la légende
+                            const legendContent = `
+                                <h4>Heatmap Legend</h4>
+                                <div id="gradient"></div>
+                                <p>Intensity Range: ${maxIntensity} - ${minIntensity}</p>
+                                <!-- Ajoutez d'autres informations de légende selon vos besoins -->
+                            `;
+                            document.getElementById("legend-content").innerHTML = legendContent;
 
                         });
                     });
