try to find the perimeter

--- a/index.html
+++ b/index.html
@@ -204,16 +204,33 @@
                 .then(data => {
                     // Loop through the data and create polygons for each area
                     data.forEach((areaData) => {
-                        const polygon = new google.maps.Polygon({
-                            paths: areaData.coordinates.map(coord => ({
-                                lat: parseFloat(coord.latitude),
-                                lng: parseFloat(coord.longitude)
-                            })),
+                        // const polygon = new google.maps.Polygon({
+                        //     paths: areaData.coordinates.map(coord => ({
+                        //         lat: parseFloat(coord.latitude),
+                        //         lng: parseFloat(coord.longitude)
+                        //     })),
+                        //     // map: map,
+                        // });
+
+                        // Loop through the data and create forms for each segment
+
+                        const coordinates = areaData.coordinates.map(coord => ({
+                            lat: parseFloat(coord.latitude),
+                            lng: parseFloat(coord.longitude),
+                            intensity: parseFloat(coord.intensity)
+                        }));
+                        
+                        // Get the perimeter pixels
+                        const perimeterPixels = getPerimeterPixels(coordinates);
+                        // Create a polygon with perimeter pixels
+                        const permieterpolygon = new google.maps.Polygon({
+                            paths: perimeterPixels,
                             map: map,
                         });
 
                         // Add click event listener to the polygon to open the info panel with data
                         polygon.addListener("click", () => {
+
                             const infoContent = `
                                 <h3>Segment ID: ${areaData.segment_id}</h3>
                             `;
@@ -226,6 +243,10 @@
                                 lng: parseFloat(coord.latitude),
                                 intensity: parseFloat(coord.intensity)
                             }));
+
+                            console.log('coucou')
+                            // Calculate the perimeter of the polygon
+                            const perimeter = calculatePerimeter(polygonCoordinates);
 
                             // Calculer le centre géométrique du polygone
                             const centerLat = polygonCoordinates.reduce((sum, coord) => sum + coord.lat, 0) / polygonCoordinates.length;
@@ -245,7 +266,7 @@
                             }));
 
                             // Add console.log for debugging
-                            console.log('polygonCoordinates V1611:', polygonCoordinates);
+                            console.log('polygonCoordinates V1814:', polygonCoordinates);
                             console.log('heatmapData:', heatmapData);
 
                             heatmap = new google.maps.visualization.HeatmapLayer({
@@ -271,6 +292,83 @@
                             document.getElementById("legend-content").innerHTML = legendContent;
 
                         });
+
+                        function getPerimeterPixels(coordinates) {
+                            const perimeterPixels = [];
+
+                            // Add all pixels of the first row directly to the perimeter
+                            perimeterPixels.push(...coordinates[0]);
+
+                            // Iterate through each line (excluding the first and last)
+                            for (let i = 1; i < coordinates.length - 1; i++) {
+                                const line = coordinates[i];
+
+                                // Add the first and last pixels of each line to the perimeter
+                                perimeterPixels.push(line[0]);
+                                perimeterPixels.push(line[line.length - 1]);
+                            }
+
+                            // Add all pixels of the last row directly to the perimeter
+                            perimeterPixels.push(...coordinates[coordinates.length - 1]);
+
+                            return perimeterPixels;
+                        }
+
+                        // Function to calculate the perimeter of a polygon
+                        // function calculatePerimeter(coordinates) {
+                        //     let perimeter = 0;
+
+                        //     for (let i = 0; i < coordinates.length - 1; i++) {
+                        //         const lat1 = coordinates[i].latitude;
+                        //         const lng1 = coordinates[i].longitude;
+                        //         const lat2 = coordinates[i + 1].latitude;
+                        //         const lng2 = coordinates[i + 1].longitude;
+
+                        //         // Calculate the distance between consecutive pairs of coordinates
+                        //         const distance = calculateDistance(lat1, lng1, lat2, lng2);
+
+                        //         // Add the distance to the perimeter
+                        //         perimeter += distance;
+                        //     }
+
+                        //     // Close the polygon by connecting the last and first coordinates
+                        //     const latFirst = coordinates[0].latitude;
+                        //     const lngFirst = coordinates[0].longitude;
+                        //     const latLast = coordinates[coordinates.length - 1].latitude;
+                        //     const lngLast = coordinates[coordinates.length - 1].longitude;
+
+                        //     const closingDistance = calculateDistance(latFirst, lngFirst, latLast, lngLast);
+                        //     perimeter += closingDistance;
+
+                        //     console.log('calculatePerimeter', perimeter)
+
+                        //     return perimeter;
+                        // }
+
+                        // // Function to calculate the distance between two sets of coordinates using the Haversine formula
+                        // function calculateDistance(lat1, lng1, lat2, lng2) {
+                        //     const earthRadius = 6371; // Earth radius in kilometers
+                        //     const dLat = toRadians(lat2 - lat1);
+                        //     const dLng = toRadians(lng2 - lng1);
+
+                        //     const a = Math.sin(dLat / 2) * Math.sin(dLat / 2) +
+                        //             Math.cos(toRadians(lat1)) * Math.cos(toRadians(lat2)) *
+                        //             Math.sin(dLng / 2) * Math.sin(dLng / 2);
+
+                        //     const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+
+                        //     const distance = earthRadius * c;
+
+                        //     console.log('calculateDistance =', distance)
+
+                        //     return distance;
+                        // }
+
+                        // // Function to convert degrees to radians
+                        // function toRadians(degrees) {
+                        //     console.log('toRadians =', degrees * (Math.PI / 180))
+                        //     return degrees * (Math.PI / 180);
+                        // }
                     });
                 })
                 .catch(error => {
